--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - random keywords on server side!
 - remember and sync hints from previous rounds
+- mark self in player list
 - sync guess on change to whole team
 - calculate results and remember black/white marks
 - read-only hint input fields when not encoder
